--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 MONGODB_URI=mongodb+srv://hdinislima:tvg7ESYO0M9Ex7B2@cluster0.eyiovw7.mongodb.net/Projeto2?retryWrites=true&w=majority&appName=Cluster0
+OPENWEATHER_API_KEY=3b608a659e8903d2b1d2b06c012aa340
+OPENCAGE_API_KEY=5ef44b58ea754512b9ee0e33ff8064a7
+JWT_SECRET=XyZ9aB3kLp4QRt7sU1vW8eFp0jNcT2YxTMzYq7RnBcC
